modules/ingress-istio/ingress_istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
spec:
  hosts:
  - "serverName.dev2.appetize-dev.com"
  gateways:
  - wildcard-http80.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: serverName-mesh
        subset: v1
      weight: 100
    - destination:
        host: serverName-mesh
        subset: v2
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr
spec:
  trafficPolicy:
    tls:
      # mode: ISTIO_MUTUAL
      mode: DISABLE
  host: serverName-mesh
  subsets:
  - name: v1
    labels:
      tier: backend
      app: serverName
      track: stable
  - name: v2
    labels:
      tier: backend
      app: serverName
      track: canary
